@@ -7,6 +7,7 @@ class Net::SSLeay::SSL_CTX {
   
   use Net::SSLeay::SSL_METHOD;
   use Net::SSLeay::X509_STORE;
+  use Net::SSLeay::X509_NAME;
   use Net::SSLeay::X509_VERIFY_PARAM;
   use Net::SSLeay::EC_KEY;
   use Net::SSLeay::DH;
@@ -75,6 +76,8 @@ class Net::SSLeay::SSL_CTX {
   native method set_session_id_context : int ($sid_ctx : string, $sid_ctx_len : int = -1);
   
   native method set_min_proto_version : int ($version : int);
+  
+  native method set_client_CA_list : void ($list : Net::SSLeay::X509_NAME[]);
   
   native method DESTROY : void ();
   
